# Ragent

./: .env-example  .gitignore  Cargo.toml  Justfile  README.md  devenv.nix
src/: error.rs  lib.rs  main.rs
src/llm/: client.rs  llm_type.rs  mod.rs  response.rs
src/llm/deepseek/: mod.rs  parser.rs  response.rs
src/llm/deepseek/enums/: finish_reason.rs  mod.rs  model.rs  tool_call_type.rs
src/llm/engine/: agent.rs  conversation.rs  engine.rs  mod.rs  role.rs
src/tool_call/: bash.rs  edit_file.rs  function_type.rs  glob_file.rs  helpers.rs  mod.rs  read_file.rs  tool.rs  write_file.rs
